--- a/contenido/contacto.html
+++ b/contenido/contacto.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="../css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/guia_estils.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;300;400&family=Gelasio:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/guia_estils.css">
     <title>Juan Ortega Herrerías</title>
 </head>
 
@@ -43,7 +47,6 @@
                     </li>
                 </ul>
             </div>
-
             <div class="col-12 offset-sm-4 col-sm-8 offset-md-6 col-md-6
                     offset-xl-0 col-xl-4">
                 <ul class="row list-inline text-center text-lg-end">
@@ -61,23 +64,19 @@
 
     <!-- MAIN -->
     <main class="container-fluid row">
-        <div class="col-6 offset-3 mt-5 text-center">
+        <div class="col-12  offset-md-2 col-md-8 offset-lg-3 col-lg-6 mt-5 col-xl-5 offset-xl-4 text-center">
             <h1>CONTACTANOS</h1>
-            <form action="../index.html" id="form" class="col-8 m-auto">
+            <form action="../index.html" id="form" class="col-12  m-auto">
                 <div class="datos_personales row">
                     <div class="col-10 m-auto">
                         <h3>Datos Personales</h3>
                         <div class="row text-start p-3
                                 justify-content-between">
-
                             <label class="col-4">Nombre:</label>
-                            <input class="col-6 " type="text" placeholder="Escribe tu nombre..." />
-
+                            <input class="col-7 " type="text" placeholder="Escribe tu nombre..." />
                             <label class=" col-4">Email:</label>
-                            <input class="col-8" type="email" placeholder="Escribe tu email..." />
-
+                            <input class="col-7" type="email" placeholder="Escribe tu email..." />
                             <textarea class="col-12" rows="10" placeholder="Comentanos lo que necesites..."></textarea>
-
                         </div>
                         <input type="submit" class="input-button" />
                     </div>
