--- a/contenido/login.html
+++ b/contenido/login.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;300;400&family=Gelasio:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/guia_estils.css">
     <link rel="stylesheet" href="../css/guia_estils.css">
     <title>Juan Ortega Herrerías</title>
 </head>
@@ -58,18 +62,18 @@
     </header>
     <!-- MAIN -->
     <main class="container-fluid row ">
-        <div class="col-6 offset-3 mt-5 text-center ">
+        <div class="col-12 offset-sm-2 col-sm-8 offset-md-3 col-md-6 offset-lg-4 col-lg-5 mt-5 col-xl-4 offset-xl-4 text-center">
             <h1 class="my-3">INTRODUCE TU USUARIO</h1>
 
-            <form action="../index.html" id="form" class="col-8 m-auto">
+            <form action="../index.html" id="form" class="col-12 m-auto">
                 <div class=" row ">
-                    <div class="col-10 m-auto p-4">
+                    <div class="col-12 m-auto ">
                         <h3>Login</h3>
                         <div class="row text-start p-3 justify-content-between">
                             <label class="col-4">Email</label>
-                            <input class="col-8" type="email" placeholder="Escribe tu email..." />
+                            <input class="col-7" type="email" placeholder="Escribe tu email..." />
                             <label class="col-4">Contraseña:</label>
-                            <input class="col-8" type="password" /></label>
+                            <input class="col-7" type="password" /></label>
                         </div>
                         <input class="btn input-button btn-lg " type="submit"></button>
                     </div>
@@ -113,8 +117,6 @@
             </div>
         </div>
     </footer>
-
-
 </body>
 
 </html>
