--- a/contenido/novedades.html
+++ b/contenido/novedades.html
@@ -7,13 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;300;400&family=Gelasio:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/guia_estils.css">
     <link rel="stylesheet" href="../css/guia_estils.css">
     <title>Juan Ortega Herrerías</title>
 </head>
 
 <body>
-    <div class="container-fluid">
-        <header class="row colorPrincipal align-items-center ">
+    <header class="container-fluid">
+        <div class="row colorPrincipal align-items-center ">
             <div class="col-12 col-md-8 col-lg-6 col-xl-4">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-1">
@@ -54,12 +58,12 @@
                     </li>
                 </ul>
             </div>
-        </header>
-    </div>
+        </div>
+    </header>
 
 
-    <div class="container-fluid row ">
-        <main class="col">
+    <main class="container-fluid row ">
+        <div class="col">
             <div class="text-center p-4">
                 <h2>NOVEDADES</h2>
             </div>
@@ -150,20 +154,10 @@
                     </div>
                 </article>
             </div>
-        </main>
-
-
-    </div>
-
-
-
-
-
-
-
-
-    <div class="container-fluid colorSecundario">
-        <footer class="row mt-5 align-items-xl-center">
+        </div>
+    </main>
+    <footer class="container-fluid colorSecundario">
+        <div class="row mt-5 align-items-xl-center">
             <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                 <h3>Mantente informado...</h3>
                 <ul class="list-inline">
@@ -199,8 +193,8 @@
                     <a href="#">Condiciones de uso</a>
                 </p>
             </div>
-        </footer>
-    </div>
+        </div>
+    </footer>
 
 </body>
 
