--- a/contenido/nuevo_usuario.html
+++ b/contenido/nuevo_usuario.html
@@ -7,13 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;300;400&family=Gelasio:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/guia_estils.css">
     <link rel="stylesheet" href="../css/guia_estils.css">
     <title>Juan Ortega Herrerías</title>
 </head>
 
 <body>
-    <div class="container-fluid">
-        <header class="row colorPrincipal align-items-center ">
+    <header class="container-fluid">
+        <div class="row colorPrincipal align-items-center ">
             <div class="col-12 col-md-8 col-lg-6 col-xl-4">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-1">
@@ -54,49 +58,44 @@
                     </li>
                 </ul>
             </div>
-        </header>
-    </div>
+        </div>
+    </header>
 
-    <div class="container-fluid row">
-        <div class="col-6 offset-3 mt-5 text-center">
+    <main class="container-fluid row">
+        <div class="col-12  offset-md-2 col-md-8 offset-lg-3 col-lg-6 mt-5 col-xl-5 offset-xl-4 text-center">
             <h1>NUEVO USUARIO</h1>
 
-            <form action="../index.html" id="form" class="col-8 m-auto">
+            <form action="../index.html" id="form" class="col-12 m-auto mt-5 mb-5">
                 <div class="datos_personales row ">
-                    <div class="col-10 m-auto ">
+                    <div class="col-12   m-auto ">
                         <h3>Datos Personales</h3>
                         <div class="row text-start p-3 justify-content-between">
-                            <label>Nombre:
-                                    <input type="text" placeholder="Escribe tu nombre..."/></label>
-                            <label>Apellido 1:
-                                    <input type="text" placeholder="Escribe tu nombre..."/></label>
-                            <label>Apellido 2:
-                                    <input type="text" placeholder="Escribe tu nombre..."/></label>
-                            <label>Contraseña:
-                                    <input type="password"/></label>
-                            <label>Email:
-                                    <input type="email" placeholder="Escribe tu email..."/></label>
-                            <label>Fecha de nacimiento:
-                                    <input max="99" min="1" placeholder="Escribe tu edad..." type="date"/></label>
-                            <label>Estado civil:
-                                    <select>
-                                        <option value="soltero">Soltero</option>
-                                        <option value="casado/a">Casado/a</option>
-                                        <option value="viudo/a">Viudo/a</option>
-                                        <option value="separado">Separado/a</option>
-                                  
-                                </select>
-                            </label>
-                        </div>
-                        <div class="row mt-2 justify-content-start">
-                            <div class="col-12 text-start">
-                                <label>Estado actual:</label>
-                            </div>
-                            <div class="col-4">
-                                <label><input type="radio"  value="trabajando"/> Trabajando</label>
-                                <label><input type="radio"  value="estudiando"/ >Estudiando</label>
-                                <label><input type="radio"  value="ambas"/> Ambas</label>
-                                <label><input type="radio"  value="ninguna"/> Ninguna</label>
+
+                            <label class="col-5">Nombre:</label>
+                            <input class="col-7" type="text" placeholder="Escribe tu nombre..." />
+                            <label class="col-5">Apellido 1:</label>
+                            <input class="col-7" type="text" placeholder="Escribe tu nombre..." />
+                            <label class="col-5">Apellido 2:</label>
+                            <input class="col-7" type="text" placeholder="Escribe tu nombre..." />
+                            <label class="col-5">Contraseña:</label>
+                            <input class="col-7" type="password" />
+                            <label class="col-5">Email:</label>
+                            <input class="col-7" type="email" placeholder="Escribe tu email..." />
+                            <label class="col-5">Fecha de nacimiento:</label>
+                            <input class="col-7" max="99" min="1" placeholder="Escribe tu edad..." type="date" />
+                            <label class="col-5">Estado civil:</label>
+                            <select class="col-7">
+                                    <option value="soltero">Soltero</option>
+                                    <option value="casado/a">Casado/a</option>
+                                    <option value="viudo/a">Viudo/a</option>
+                                    <option value="separado">Separado/a</option>                                
+                            </select>
+                            <label>Estado actual:</label>
+                            <div class="row">
+                                <label class="col-6"><input type="radio"  value="trabajando"/> Trabajando</label>
+                                <label class="col-6"><input type="radio"  value="estudiando"/ >Estudiando</label>
+                                <label class="col-6"><input type="radio"  value="ambas"/> Ambas</label>
+                                <label class="col-6"><input type="radio"  value="ninguna"/> Ninguna</label>
                             </div>
                         </div>
 
@@ -105,11 +104,9 @@
                 </div>
             </form>
         </div>
-    </div>
-
-
-    <div class="container-fluid colorSecundario">
-        <footer class="row mt-5 align-items-xl-center">
+    </main>
+    <footer class="container-fluid colorSecundario">
+        <div class="row mt-5 align-items-xl-center">
             <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                 <h3>Mantente informado...</h3>
                 <ul class="list-inline">
@@ -145,10 +142,8 @@
                     <a href="#">Condiciones de uso</a>
                 </p>
             </div>
-        </footer>
-    </div>
-
-
+        </div>
+    </footer>
 </body>
 
 </html>
