--- a/contenido/novedades.html
+++ b/contenido/novedades.html
@@ -17,42 +17,42 @@
 
 <body>
     <header class="container-fluid">
-        <div class="row colorPrincipal align-items-center ">
+        <div class="row colorPrincipal align-items-center">
             <div class="col-12 col-md-8 col-lg-6 col-xl-4">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-1">
-                        <img class="web-icono" src="../imagenes/mascaras.png" alt="Icono
-          de cultural life" />
+                        <img class="web-icono d-none d-lg-flex" src="../imagenes/mascaras.png" alt="Icono
+                                de cultural life" />
                     </div>
                     <div class="col-10 col-lg-10">
                         <h1>CULTURAL LIFE</h1>
-                        <h2>Nuestra vida es la cultura.</h2>
+                        <h2 class="d-none d-lg-flex ">Nuestra vida es la cultura.</h2>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-6 col-xl-4">
                 <ul class="row list-inline text-lg-center">
-                    <li class="list-inline-item col ">
+                    <li class="list-inline-item col">
                         <a href="../index.html">Inicio</a>
                     </li>
-                    <li class="list-inline-item col ">
+                    <li class="list-inline-item col">
                         <a href="../contenido/el_critico.html">El Crítico</a>
                     </li>
-                    <li class="list-inline-item col ">
+                    <li class="list-inline-item col">
                         <a href="../contenido/novedades.html">Novedades</a>
                     </li>
-                    <li class="list-inline-item col ">
+                    <li class="list-inline-item col">
                         <a href="../contenido/contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
-
-            <div class="col-12  offset-sm-4 col-sm-8  offset-md-6 col-md-6 offset-xl-0 col-xl-4">
+            <div class="col-12 offset-sm-4 col-sm-8 offset-md-6 col-md-6
+                    offset-xl-0 col-xl-4">
                 <ul class="row list-inline text-center text-lg-end">
-                    <li class="list-inline-item col   ">
+                    <li class="list-inline-item col">
                         <img class="icono" src="../imagenes/login.svg" alt="login" /><a href="../contenido/login.html">Entrar</a>
                     </li>
-                    <li class="list-inline-item col ">
+                    <li class="list-inline-item col">
                         <img class="icono" src="../imagenes/new_user.svg" alt="nuevo usuario" />
                         <a href="../contenido/nuevo_usuario.html">Nuevo_Usuario</a>
                     </li>
@@ -62,6 +62,7 @@
     </header>
 
 
+
     <main class="container-fluid row ">
         <div class="col">
             <div class="text-center p-4">
@@ -69,7 +70,7 @@
             </div>
             <div class="row">
                 <article class="col-12 col-lg-6 col-xl-3 ">
-                    <div class="row container ">
+                    <div class="row text-center">
                         <figure class="col">
                             <img class="img-fluid" src="../imagenes/bumbury.jpg" alt="Disco nuevo de bumbury" />
                             <figcaption>Bumbury en concierto</figcaption>
@@ -91,7 +92,7 @@
                     <p><a href="../contenido/resultados.html">COMPRAR ENTRADAS</a></p>
                 </article>
                 <article class="col-12 col-lg-6 col-xl-3 ">
-                    <div class="row container  ">
+                    <div class="row text-center  ">
                         <figure class="col">
                             <img class="img-fluid " src="../imagenes/zapato_veloz_in_concert.jpg" alt="Concierto de zapato veloz" />
                             <figcaption>Zapato veloz live</figcaption>
@@ -112,7 +113,7 @@
                     </div>
                 </article>
                 <article class="col-12 col-lg-6 col-xl-3 ">
-                    <div class="row container  ">
+                    <div class="row  text-center ">
                         <figure class="col">
                             <img class="img-fluid" src="../imagenes/Tu_actriz_favorita.png" alt="Locura en gravidez" />
                             <figcaption>Anna Torner</figcaption>
@@ -133,7 +134,7 @@
                     </div>
                 </article>
                 <article class="col-12 col-lg-6 col-xl-3  ">
-                    <div class="row ">
+                    <div class="row text-center">
                         <figure class="col ">
                             <img class="img-fluid " src="../imagenes/bambo_greeeps_show.jpeg" alt="Teatro alternativo bambo greeeps show" />
                             <figcaption>Bambo greeps show</figcaption>
@@ -163,34 +164,34 @@
                 <ul class="list-inline">
                     <li class="list-inline-item">
                         <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario" src="../imagenes/instagram.svg" alt="icono
-                  de instagram" /></a>
+                                    de instagram" /></a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://es-es.facebook.com/" target="_blank"><img class="icono colorSecundario" src="../imagenes/facebook.svg" alt="icono
-                  de facebook" /></a>
+                        <a href="https://es-es.facebook.com/" target="_blank"><img class="icono
+                                    colorSecundario" src="../imagenes/facebook.svg" alt="icono
+                                    de facebook" /></a>
                     </li>
                     <li class="list-inline-item">
                         <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario" src="../imagenes/twitter.svg" alt="icono
-                  de twitter" /></a>
+                                    de twitter" /></a>
                     </li>
                 </ul>
             </div>
-            <div class="col-12 col-md-8 col-lg-6 col-xl-6">
-                <div class="container row align-items-center">
-                    <div class="col">
-                        <img class="icono-mediano" src="../imagenes/mascaras.png" alt="Icono
-                de cultural life" />
+            <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6" ">
+                <div class="container row align-items-center ">
+                    <div class="col ">
+                        <img class="icono-mediano " src="../imagenes/mascaras.png " alt="Icono de cultural life " />
                     </div>
-                    <div class="col-9">
+                    <div class="col-9 ">
                         <h2>CULTURAL LIFE</h2>
                         <h3>Nuestra vida es la cultura.</h3>
                     </div>
                 </div>
             </div>
-            <div class="col-12 text-end col-xl-4">
+            <div class="col-12 text-end col-xl-4 ">
 
                 <p>Te informamos de los términos legales y nuestras
-                    <a href="#">Condiciones de uso</a>
+                    <a href="# ">Condiciones de uso</a>
                 </p>
             </div>
         </div>
