--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,12 +24,12 @@
             <div class="col-12 col-md-8 col-lg-6 col-xl-4">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-1">
-                        <img class="web-icono" src="./imagenes/mascaras.png" alt="Icono
+                        <img class="web-icono d-none d-lg-flex" src="./imagenes/mascaras.png" alt="Icono
           de cultural life" />
                     </div>
                     <div class="col-10 col-lg-10">
                         <h1>CULTURAL LIFE</h1>
-                        <h2>Nuestra vida es la cultura.</h2>
+                        <h2 class="d-none d-lg-flex ">Nuestra vida es la cultura.</h2>
                     </div>
                 </div>
             </div>
@@ -89,8 +88,8 @@
                         </ul>
                     </div>
                 </nav>
-                <aside class="publi1 col-12 col-lg-12 order-2 order-lg-0 mt-4">
-                    <div class="row container-fluid">
+                <aside class="d-none d-lg-flex col-12 col-lg-12 mt-4">
+                    <div class="row container">
                         <div class="col col-lg-12">
                             <img class="img-fluid" src="./imagenes/como-hacer-un-banner.png" alt="Esto es un banner publicitario" />
                         </div>
@@ -107,11 +106,11 @@
                 <div class="text-center mb-5">
                     <h2>RECOMENDAMOS ESTA SEMANA</h2>
                 </div>
-                <div class="row container-xl row-cols-xl-6">
+                <div class="row  row-cols-xl-6">
                     <article class="col-12 col-xl-6 ">
-                        <div class="row container-md  ">
+                        <div class="row text-center ">
                             <figure class="col-12">
-                                <img class="img-fluid offset-md-2 offset-lg-0   " src="./imagenes/aitana_concierto.jpg" alt="Disco nuevo de Aitana" />
+                                <img class="img-fluid  " src="./imagenes/aitana_concierto.jpg" alt="Disco nuevo de Aitana" />
                                 <figcaption>Aitana en concierto</figcaption>
                             </figure>
                         </div>
@@ -159,7 +158,7 @@
                 </div>
             </main>
             <!-- Footer -->
-            <aside class="publi2 col-12 col-lg-12 order-lg-0">
+            <aside class="d-flex d-lg-none col-12 col-lg-12 order-lg-0">
                 <div class=" row container-fluid">
                     <div class="col">
                         <img class="img-fluid" src="./imagenes/como-hacer-un-banner.png" alt="Esto es un banner publicitario" />
@@ -191,7 +190,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-12 col-md-8 col-lg-6 col-xl-6">
+            <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6">
                 <div class="container row align-items-center">
                     <div class="col ">
                         <img class="icono-mediano " src="./imagenes/mascaras.png " alt="Icono de cultural life " />
