--- a/contenido/el_critico.html
+++ b/contenido/el_critico.html
@@ -22,12 +22,12 @@
             <div class="col-12 col-md-8 col-lg-6 col-xl-4">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-1">
-                        <img class="web-icono" src="../imagenes/mascaras.png" alt="Icono
+                        <img class="web-icono d-none d-lg-flex" src="../imagenes/mascaras.png" alt="Icono
                                 de cultural life" />
                     </div>
                     <div class="col-10 col-lg-10">
                         <h1>CULTURAL LIFE</h1>
-                        <h2>Nuestra vida es la cultura.</h2>
+                        <h2 class="d-none d-lg-flex ">Nuestra vida es la cultura.</h2>
                     </div>
                 </div>
             </div>
@@ -48,30 +48,29 @@
                 </ul>
             </div>
             <div class="col-12 offset-sm-4 col-sm-8 offset-md-6 col-md-6
-                    offset-xl-0
-                    col-xl-4">
+                    offset-xl-0 col-xl-4">
                 <ul class="row list-inline text-center text-lg-end">
                     <li class="list-inline-item col">
                         <img class="icono" src="../imagenes/login.svg" alt="login" /><a href="../contenido/login.html">Entrar</a>
                     </li>
                     <li class="list-inline-item col">
-                        <img class="icono" src="../imagenes/new_user.svg" alt="nuevo
-                                usuario" />
+                        <img class="icono" src="../imagenes/new_user.svg" alt="nuevo usuario" />
                         <a href="../contenido/nuevo_usuario.html">Nuevo_Usuario</a>
                     </li>
                 </ul>
             </div>
         </div>
     </header>
+
     <!-- MAIN -->
     <main class="container-fluid row">
-        <div class="col-12 mt-5">
+        <div class="col-12 mt-5 ">
             <div class="text-center">
                 <h2>EL CRÍTICO RECOMIENDA</h2>
             </div>
-            <div class="row mt-5">
-                <div class="col-12 col-lg-5">
-                    <div class="row container">
+            <div class="row  mt-3">
+                <div class="col-12 offset-lg-2 col-lg-8 offset-xl-0 col-xl-4 ">
+                    <div class="row text-center">
                         <figure class="col mt-5">
                             <img class="img-fluid" src="../imagenes/concierto_navidad.jpg" alt="concierto
                                     de navidad" />
@@ -79,10 +78,10 @@
                         </figure>
                     </div>
                 </div>
-                <article class="col-12 col-lg-6 m-auto">
+                <article class="col-12 col-xl-8 ">
                     <div class="row">
                         <div class="col-12">
-                            <h3 class="text-center mb-4">CONCIERTO DE NAVIDAD
+                            <h3 class="mb-4 text-center">CONCIERTO DE NAVIDAD
                             </h3>
                             <p>
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam, inventore vel doloremque placeat delectus exercitationem adipisci repudiandae fuga veniam, maxime sit maiores quam iusto numquam dolores cupiditate veritatis libero temporibus quod pariatur
@@ -98,37 +97,35 @@
                             </p>
                         </div>
                 </article>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-md-5">
-                        <div class="row mt-5 container">
-                            <figure>
-                                <img class="img-fluid" src="../imagenes/tatiana.jpg" alt="Charlas
+                <div class="offset-lg-2 col-lg-8 offset-xl-0 col-xl-4 ">
+                    <div class="row mt-5 text-center">
+                        <figure class="col">
+                            <img class="img-fluid" src="../imagenes/tatiana.jpg" alt="Charlas
                                 con Tatiana" />
 
-                                <figcaption>Charlas con Tatiana</figcaption>
-                            </figure>
+                            <figcaption>Charlas con Tatiana</figcaption>
+                        </figure>
+                    </div>
+                </div>
+                <article class="col-12 col-lg-8">
+                    <div class="row">
+                        <div class="col-12">
+                            <h3 class="text-center mb-3">CHARLAS CON TATIANA UBBRESKVIA</h3>
+                            <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam, inventore vel doloremque placeat delectus exercitationem adipisci repudiandae fuga veniam, maxime sit maiores quam iusto numquam dolores cupiditate veritatis libero temporibus quod pariatur
+                                fugiat harum et! Beatae tenetur esse magni veniam, totam distinctio eaque. Dolorem libero molestiae ducimus mollitia minima iure? Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, eum minima, quae nam,
+                                iste
+                            </p>
+                            <p>aceat distinctio vel hic assumenda deserunt molestiae sit repellat, sequi aut, quod facilis quos inventore! Pariatur, exercitationem consectetur? Ratione ipsam architecto deleniti quidem ad fuga quo necessitatibus non odio
+                                delectus rerum, dignissimos eos vero eligendi neque laudantium totam eveniet perspiciatis? Minus nam qui sequi rem recusandae?
+                            </p>
+                            <p>
+                                <a href="./contenido/resultados.html">COMPRAR
+                                    ENTRADAS</a>
+                            </p>
                         </div>
                     </div>
-                    <article class="col-12 col-md-6 m-auto">
-                        <div class="row">
-                            <div class="col-12">
-                                <h3 class="text-center mb-3">CHARLAS CON TATIANA UBBRESKVIA</h3>
-                                <p>
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam, inventore vel doloremque placeat delectus exercitationem adipisci repudiandae fuga veniam, maxime sit maiores quam iusto numquam dolores cupiditate veritatis libero temporibus quod pariatur
-                                    fugiat harum et! Beatae tenetur esse magni veniam, totam distinctio eaque. Dolorem libero molestiae ducimus mollitia minima iure? Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, eum minima, quae nam,
-                                    iste
-                                </p>
-                                <p>aceat distinctio vel hic assumenda deserunt molestiae sit repellat, sequi aut, quod facilis quos inventore! Pariatur, exercitationem consectetur? Ratione ipsam architecto deleniti quidem ad fuga quo necessitatibus non odio
-                                    delectus rerum, dignissimos eos vero eligendi neque laudantium totam eveniet perspiciatis? Minus nam qui sequi rem recusandae?
-                                </p>
-                                <p>
-                                    <a href="./contenido/resultados.html">COMPRAR
-                                    ENTRADAS</a>
-                                </p>
-                            </div>
-                        </div>
-                    </article>
+                </article>
                 </div>
             </div>
     </main>
@@ -139,46 +136,39 @@
                 <h3>Mantente informado...</h3>
                 <ul class="list-inline">
                     <li class="list-inline-item">
-                        <a href="http://www.instagram.com" target="_blank"><img class="icono
-                                            colorSecundario" src="../imagenes/instagram.svg" alt="icono
-                                            de instagram" /></a>
+                        <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario" src="../imagenes/instagram.svg" alt="icono
+                                    de instagram" /></a>
                     </li>
                     <li class="list-inline-item">
                         <a href="https://es-es.facebook.com/" target="_blank"><img class="icono
-                                            colorSecundario" src="../imagenes/facebook.svg" alt="icono
-                                            de facebook" /></a>
+                                    colorSecundario" src="../imagenes/facebook.svg" alt="icono
+                                    de facebook" /></a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://twitter.com/" target="_blank"><img class="icono
-                                            colorSecundario" src="../imagenes/twitter.svg" alt="icono
-                                            de twitter" /></a>
+                        <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario" src="../imagenes/twitter.svg" alt="icono
+                                    de twitter" /></a>
                     </li>
                 </ul>
             </div>
-            <div class="col-12 col-md-8 col-lg-6 col-xl-6">
-                <div class="container row align-items-center">
-                    <div class="col">
-                        <img class="icono-mediano" src="../imagenes/mascaras.png" alt="Icono
-                                        de cultural life" />
+            <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6" ">
+                <div class="container row align-items-center ">
+                    <div class="col ">
+                        <img class="icono-mediano " src="../imagenes/mascaras.png " alt="Icono de cultural life " />
                     </div>
-                    <div class="col-9">
+                    <div class="col-9 ">
                         <h2>CULTURAL LIFE</h2>
                         <h3>Nuestra vida es la cultura.</h3>
                     </div>
                 </div>
             </div>
-            <div class="col-12 text-end col-xl-4">
+            <div class="col-12 text-end col-xl-4 ">
 
                 <p>Te informamos de los términos legales y nuestras
-                    <a href="#">Condiciones de uso</a>
+                    <a href="# ">Condiciones de uso</a>
                 </p>
             </div>
         </div>
     </footer>
-
-</body>
-
-</html>
 </body>
 
 </html>
