--- a/contenido/login.html
+++ b/contenido/login.html
@@ -18,41 +18,42 @@
 <body>
     <!-- HEADER -->
     <header class="container-fluid">
-        <div class="row colorPrincipal align-items-center ">
+        <div class="row colorPrincipal align-items-center">
             <div class="col-12 col-md-8 col-lg-6 col-xl-4">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-1">
-                        <img class="web-icono" src="../imagenes/mascaras.png" alt="Icono
-          de cultural life" />
+                        <img class="web-icono d-none d-lg-flex" src="../imagenes/mascaras.png" alt="Icono
+                                de cultural life" />
                     </div>
                     <div class="col-10 col-lg-10">
                         <h1>CULTURAL LIFE</h1>
-                        <h2>Nuestra vida es la cultura.</h2>
+                        <h2 class="d-none d-lg-flex ">Nuestra vida es la cultura.</h2>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-6 col-xl-4">
                 <ul class="row list-inline text-lg-center">
-                    <li class="list-inline-item col ">
+                    <li class="list-inline-item col">
                         <a href="../index.html">Inicio</a>
                     </li>
-                    <li class="list-inline-item col ">
+                    <li class="list-inline-item col">
                         <a href="../contenido/el_critico.html">El Crítico</a>
                     </li>
-                    <li class="list-inline-item col ">
+                    <li class="list-inline-item col">
                         <a href="../contenido/novedades.html">Novedades</a>
                     </li>
-                    <li class="list-inline-item col ">
+                    <li class="list-inline-item col">
                         <a href="../contenido/contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
-            <div class="col-12  offset-sm-4 col-sm-8  offset-md-6 col-md-6 offset-xl-0 col-xl-4">
+            <div class="col-12 offset-sm-4 col-sm-8 offset-md-6 col-md-6
+                    offset-xl-0 col-xl-4">
                 <ul class="row list-inline text-center text-lg-end">
-                    <li class="list-inline-item col   ">
+                    <li class="list-inline-item col">
                         <img class="icono" src="../imagenes/login.svg" alt="login" /><a href="../contenido/login.html">Entrar</a>
                     </li>
-                    <li class="list-inline-item col ">
+                    <li class="list-inline-item col">
                         <img class="icono" src="../imagenes/new_user.svg" alt="nuevo usuario" />
                         <a href="../contenido/nuevo_usuario.html">Nuevo_Usuario</a>
                     </li>
@@ -60,6 +61,8 @@
             </div>
         </div>
     </header>
+
+
     <!-- MAIN -->
     <main class="container-fluid row ">
         <div class="col-12 offset-sm-2 col-sm-8 offset-md-3 col-md-6 offset-lg-4 col-lg-5 mt-5 col-xl-4 offset-xl-4 text-center">
@@ -82,23 +85,27 @@
         </div>
     </main>
     <!-- FOOTER -->
-    <footer class=" container-fluid colorSecundario">
-        <div class="row mt-5 align-items-xl-center ">
-            <div class="col-12 col-md-4 col-lg-3 col-xl-2 ">
+    <footer class="container-fluid colorSecundario">
+        <div class="row mt-5 align-items-xl-center">
+            <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                 <h3>Mantente informado...</h3>
-                <ul class="list-inline ">
-                    <li class="list-inline-item ">
-                        <a href="http://www.instagram.com " target="_blank "><img class="icono colorSecundario " src="../imagenes/instagram.svg " alt="icono de instagram " /></a>
+                <ul class="list-inline">
+                    <li class="list-inline-item">
+                        <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario" src="../imagenes/instagram.svg" alt="icono
+                                    de instagram" /></a>
                     </li>
-                    <li class="list-inline-item ">
-                        <a href="https://es-es.facebook.com/ " target="_blank "><img class="icono colorSecundario " src="../imagenes/facebook.svg " alt="icono de facebook " /></a>
+                    <li class="list-inline-item">
+                        <a href="https://es-es.facebook.com/" target="_blank"><img class="icono
+                                    colorSecundario" src="../imagenes/facebook.svg" alt="icono
+                                    de facebook" /></a>
                     </li>
-                    <li class="list-inline-item ">
-                        <a href="https://twitter.com/ " target="_blank "><img class="icono colorSecundario " src="../imagenes/twitter.svg " alt="icono de twitter " /></a>
+                    <li class="list-inline-item">
+                        <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario" src="../imagenes/twitter.svg" alt="icono
+                                    de twitter" /></a>
                     </li>
                 </ul>
             </div>
-            <div class="col-12 col-md-8 col-lg-6 col-xl-6 ">
+            <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6" ">
                 <div class="container row align-items-center ">
                     <div class="col ">
                         <img class="icono-mediano " src="../imagenes/mascaras.png " alt="Icono de cultural life " />
