--- a/index.html
+++ b/index.html
@@ -21,30 +21,30 @@
     <!-- Header -->
     <header class="container-fluid">
         <div class="row colorPrincipal align-items-center ">
-            <div class="col-12 col-md-8 col-lg-6 col-xl-4">
+            <div class="col-12 col-lg-6 col-xl-4">
                 <div class="row align-items-center justify-content-between">
-                    <div class="col-1">
+                    <div class="col-lg-1">
                         <img class="web-icono d-none d-lg-flex" src="./imagenes/mascaras.png" alt="Icono
           de cultural life" />
                     </div>
-                    <div class="col-10 col-lg-10">
-                        <h1>CULTURAL LIFE</h1>
-                        <h2 class="d-none d-lg-flex ">Nuestra vida es la cultura.</h2>
+                    <div class="col-12 col-lg-10 ">
+                        <h1 class="text-center">CULTURAL LIFE</h1>
+                        <h2 class="d-none d-lg-flex text-center">Nuestra vida es la cultura.</h2>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-6 col-xl-4">
-                <ul class="row list-inline text-lg-center">
-                    <li class="list-inline-item col ">
+                <ul class="row list-inline text-lg-end">
+                    <li class="list-inline-item col-2 offset-sm-2 col-sm-2 offset-md-0 col-md-3">
                         <a href="./index.html">Inicio</a>
                     </li>
-                    <li class="list-inline-item col ">
-                        <a href="./contenido/el_critico.html">El Crítico</a>
+                    <li class="list-inline-item col-2 col-sm-2 col-md-3">
+                        <a href="./contenido/el_critico.html">El_Crítico</a>
                     </li>
-                    <li class="list-inline-item col ">
+                    <li class="list-inline-item offset-1 col-2 offset-sm-0 col-sm-2 col-md-3">
                         <a href="./contenido/novedades.html">Novedades</a>
                     </li>
-                    <li class="list-inline-item col ">
+                    <li class="list-inline-item col-2 col-sm-2 col-md-2">
                         <a href="./contenido/contacto.html">Contacto</a>
                     </li>
                 </ul>
