--- a/contenido/resultados.html
+++ b/contenido/resultados.html
@@ -17,44 +17,44 @@
 
 <body>
     <header class="container-fluid">
-        <div class="row colorPrincipal align-items-center">
-            <div class="col-12 col-md-8 col-lg-6 col-xl-4">
+        <div class="row colorPrincipal align-items-center ">
+            <div class="col-12 col-lg-6 col-xl-4">
                 <div class="row align-items-center justify-content-between">
-                    <div class="col-1">
+                    <div class="col-lg-1">
                         <img class="web-icono d-none d-lg-flex" src="../imagenes/mascaras.png" alt="Icono
-                                de cultural life" />
+          de cultural life" />
                     </div>
-                    <div class="col-10 col-lg-10">
-                        <h1>CULTURAL LIFE</h1>
-                        <h2 class="d-none d-lg-flex ">Nuestra vida es la cultura.</h2>
+                    <div class="col-12 col-lg-10 ">
+                        <h1 class="text-center">CULTURAL LIFE</h1>
+                        <h2 class="d-none d-lg-flex text-center">Nuestra vida es la cultura.</h2>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-6 col-xl-4">
-                <ul class="row list-inline text-lg-center">
-                    <li class="list-inline-item col">
+                <ul class="row list-inline text-lg-end">
+                    <li class="list-inline-item col-2 offset-sm-2 col-sm-2 offset-md-0 col-md-3">
                         <a href="../index.html">Inicio</a>
                     </li>
-                    <li class="list-inline-item col">
-                        <a href="../contenido/el_critico.html">El Crítico</a>
+                    <li class="list-inline-item col-2 col-sm-2 col-md-3">
+                        <a href="el_critico.html">El_Crítico</a>
                     </li>
-                    <li class="list-inline-item col">
-                        <a href="../contenido/novedades.html">Novedades</a>
+                    <li class="list-inline-item offset-1 col-2 offset-sm-0 col-sm-2 col-md-3">
+                        <a href="novedades.html">Novedades</a>
                     </li>
-                    <li class="list-inline-item col">
-                        <a href="../contenido/contacto.html">Contacto</a>
+                    <li class="list-inline-item col-2 col-sm-2 col-md-2">
+                        <a href="contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
-            <div class="col-12 offset-sm-4 col-sm-8 offset-md-6 col-md-6
-                    offset-xl-0 col-xl-4">
+
+            <div class="col-12  offset-sm-4 col-sm-8  offset-md-6 col-md-6 offset-xl-0 col-xl-4">
                 <ul class="row list-inline text-center text-lg-end">
-                    <li class="list-inline-item col">
-                        <img class="icono" src="../imagenes/login.svg" alt="login" /><a href="../contenido/login.html">Entrar</a>
+                    <li class="list-inline-item col   ">
+                        <img class="icono" src="../imagenes/login.svg" alt="login" /><a href="login.html">Entrar</a>
                     </li>
-                    <li class="list-inline-item col">
+                    <li class="list-inline-item col ">
                         <img class="icono" src="../imagenes/new_user.svg" alt="nuevo usuario" />
-                        <a href="../contenido/nuevo_usuario.html">Nuevo_Usuario</a>
+                        <a href="nuevo_usuario.html">Nuevo_Usuario</a>
                     </li>
                 </ul>
             </div>
