--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
                     <li class="list-inline-item col-2 offset-sm-2 col-sm-2 offset-md-0 col-md-3">
                         <a href="./index.html">Inicio</a>
                     </li>
-                    <li class="list-inline-item col-2 col-sm-2 col-md-3">
+                    <li class="list-inline-item offset-1 col-2 offset-sm-0 col-sm-2 col-md-3">
                         <a href="./contenido/el_critico.html">El_Crítico</a>
                     </li>
-                    <li class="list-inline-item offset-1 col-2 offset-sm-0 col-sm-2 col-md-3">
+                    <li class="list-inline-item  col-3 col-sm-2 col-md-3">
                         <a href="./contenido/novedades.html">Novedades</a>
                     </li>
                     <li class="list-inline-item col-2 col-sm-2 col-md-2">
-                        <a href="./contenido/contacto.html">Contacto</a>
+                        <a href="./contenido/contacto.html">&nbspContacto</a>
                     </li>
                 </ul>
             </div>
