Falta eliminar librerias y demás cosas sobrantes

--- a/contenido/imatges.html
+++ b/contenido/imatges.html
@@ -105,11 +105,74 @@
                 </ul>
             </div>
         </nav>
-        <main class="col-12 mt-1">
+        <main class="mt-1">
             <div class="text-center">
-                <h1>PROGRAMARI D'IMATGES EN LINIA</h1>
+                <h1>PROGRAMAS IMAGEN EN LINEA</h1>
             </div>
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col">&nbsp</th>
+                        <th scope="col">
+                            <a href="https://www.dzoom.org.es/redirect.php?tarticulo=adobe&rurl=http://www.photoshop.com/tools?wf=editor">Photoshops Express</a>
+                        </th>
+                        <th scope="col">
+                            <a href="http://pixlr.com/editor/">Pixrl</a>
+                        </th>
+                        <th scope="col">
+                            <a href="http://www.sumopaint.com/">SumoPaint</a>
+                        </th>
+                        <th scope="col">
+                            <a href="http://www.fotor.com/es/">Fotor</a>
+                        </th>
+                        <th scope="col">
+                            <a href="http://www.lunapic.com/editor/">Lunapic</a>
+                        </th>
+                        <th scope="col">
+                            <a href="https://www.picmonkey.com/es/">PicMonkey</a>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Modalidad de uso</th>
+                        <td>Tiene modalidad gratuita y de suscripción que permite muchas más opciones, además de funciones premium de otras aplicaciones Adobe.</td>
+                        <td>tiene modalidad gratuita y de suscripción que aumenta las opciones, y además permite instalación en pc, para trabajar offline.</td>
+                        <td>Tiene modalidad gratuita, por suscriptción y educacional.</td>
+                        <td>Tiene modalidad gratuita, pro y pro+, mejorando sus características a medida que mejora el plan. Tiene descuento educacional.</td>
+                        <td>Tiene modalidad "completamente libre online"</td>
+                        <td>Su modalidad principal es de pago. No permite exportar imagen sin estar registrado.</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Mobile</th>
+                        <td>Permite ser usado en web y en móvil.</td>
+                        <td>Permite web y ordenador.</td>
+                        <td>Permite solo web.</td>
+                        <td>Permite web y offline en ordenador.</td>
+                        <td>Solo para web.</td>
+                        <td>Para web y dispone de aplicación Android e Ios.</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Formatos soportados</th>
+                        <td>Soporta la mayor parte de los formatos habituales.</td>
+                        <td>Soporta todos los formatos de imagen.</td>
+                        <td>Soporta la mayor parte de los formatos habituales.</td>
+                        <td>Soporta la mayoría de los formatos de imagen.</td>
+                        <td>Soporta la muchos de los formatos de imagen generalmente usados.</td>
+                        <td>Soporta muchos formatos de imagen habituales.</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Características</th>
+                        <td>No permite el uso de capas.No tiene herramientas de selección.Tiene una gran sencillez de uso.</td>
+                        <td>Dispone de una interfaz similar a photoshop.Permite el uso de capas, y tiene una gran cantidad de filtros.</td>
+                        <td>Disponible en 18 idiomas.Aún siendo bastante completo, dispone de menos filtros que otros programas.</td>
+                        <td>Dispone de la tecnología HDR, amplio almacenamiento en la nuve con Fotor Cloud y dispone de muchos recursos para el diseño.</td>
+                        <td>ES una web-app totalmente gratuita. Tiene una interfaz compleja de manejar, pero permite realizar muchas tareas. </td>
+                        <td>Es una aplicación que permite realizar tarjetas, cartas y manejar imagenes para cartelería similar a la conocida aplicación Canva.</td>
+                    </tr>
 
+                </tbody>
+            </table>
         </main>
     </div>
     <!-- FOOTER -->
