--- a/contenido/video.html
+++ b/contenido/video.html
@@ -98,7 +98,7 @@
             </div>
         </nav>
         <div class="container-fluid row">
-            <h1 class="text-center mb-5 ">INTEGRACIÓ DE VÍDEO AL WEB</h1>
+            <h1 class="text-center mb-5 ">INTEGRACIÓN DE VÍDEO EN LA WEB</h1>
             <div class="col-12 col-md-4">
                 <p><a href="#" title="Tooltip es el widget!!">Tooltips</a> permiten obtener un pequeño texto informativo cuando pasamos por encima del enlace indicamos.</p><br/>
                 <p>He instalado desde la página de JQuery el witget <a href="https://jqueryui.com/tooltip/" title="Tooltip by JQuery">Tooltip</a> que hace que cambie el formato de estos mensajes.</p><br/>
