--- a/contenido/audio.html
+++ b/contenido/audio.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;300;400&family=Gelasio:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/guia_estils.css">
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/audio.css">
     <script src="https://kit.fontawesome.com/bdb09794cc.js" crossorigin="anonymous"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
     <script src="../js/controlAudio.js"></script>
@@ -106,7 +107,7 @@
             </div>
         </nav>
         <main>
-            <h1 class="text-center">FORMAT WEBP AMB BASE MUSICAL</h1>
+            <h1 class="text-center">FORMATO WEBP CON BASE MUSICAL</h1>
 
             <div class="m-2 text-center">
                 <button id="rw" class="p1 btn btn-primary"><i class="fa-solid fa-angles-left"></i></button>
