--- a/contenido/grafica.html
+++ b/contenido/grafica.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./css/guia_estils.css">
     <link rel="stylesheet" href="../css/index.css">
     <script src="https://kit.fontawesome.com/bdb09794cc.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@latest/dist/Chart.min.js"></script>
     <title>Juan Ortega Herrerías</title>
 
 </head>
@@ -106,34 +107,44 @@
             </div>
         </nav>
         <main class="col-12 mt-1">
-            <div class="text-center">
-                <h1>INCORPORACIÓ DE GRÁFIQUES I TAULES DE DADES</h1>
-            </div>
+            <div class="row">
+                <div class="col-12 text-center ">
+                    <h2>5-3.INCORPORACIÓN DE GRÁFICAS DE DATOS</h2>
+                    <div class="row ">
+                        <div class="offset-1 col-10 col-xs-5  col-md-5 offset-xl-1 col-xl-4">
+                            <canvas id="migrafico1" width="500" height="500"></canvas>
+                        </div>
+                        <div class="offset-1 col-10 offset-xs-0 col-xs-5 col-md-5 col-xl-4">
+                            <canvas id="migrafico2" width="500" height="500"></canvas>
+                        </div>
+                    </div>
+                </div>
 
+                <script src="../js/grafica.js"></script>
         </main>
-    </div>
-    <!-- FOOTER -->
-    <footer class="container-fluid colorSecundario">
-        <div class="row mt-5 align-items-xl-center">
-            <div class="col-12 col-md-4 col-lg-3 col-xl-2">
-                <h3>Mantente informado...</h3>
-                <ul class="list-inline">
-                    <li class="list-inline-item">
-                        <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario" src="../imagenes/instagram.svg" alt="icono
+        </div>
+        <!-- FOOTER -->
+        <footer class="container-fluid colorSecundario">
+            <div class="row mt-5 align-items-xl-center">
+                <div class="col-12 col-md-4 col-lg-3 col-xl-2">
+                    <h3>Mantente informado...</h3>
+                    <ul class="list-inline">
+                        <li class="list-inline-item">
+                            <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario" src="../imagenes/instagram.svg" alt="icono
                                     de instagram" /></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://es-es.facebook.com/" target="_blank"><img class="icono
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://es-es.facebook.com/" target="_blank"><img class="icono
                                     colorSecundario" src="../imagenes/facebook.svg" alt="icono
                                     de facebook" /></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario" src="../imagenes/twitter.svg" alt="icono
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario" src="../imagenes/twitter.svg" alt="icono
                                     de twitter" /></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6" ">
+                        </li>
+                    </ul>
+                </div>
+                <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6" ">
                     <div class="container row align-items-center ">
                         <div class="col ">
                             <img class="icono-mediano "src="../imagenes/mascaras.png "alt="Icono de cultural life "/>
